# python-tind-client

./: .flake8  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: build.yml  ci.yml  release.yml
tests/: conftest.py  test_api.py  test_fetch.py
tests/fixtures/: 1st-batch-tind-response.xml  end-of-batch-tind-response.xml  tind_results.xml
tind_client/: __init__.py  api.py  client.py  errors.py  fetch.py
