[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "python-tind-client"
version = "0.1.1"
description = "Python library for interacting with the TIND DA API"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Jason Raitz", email = "raitz@berkeley.edu" },
    { name = "maría a. matienzo", email = "matienzo@berkeley.edu" },
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32",
    "pymarc>=5.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3",
    "requests-mock>=1.12",
]
lint = [
    "mypy>=1.14",
    "pydoclint>=0.5",
    "pylint>=3.3",
    "types-requests>=2.32",
]
debug = [
    "debugpy>=1.8",
]
dev = [
    "python-tind-client[test,lint,debug]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tind_client*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
warn_redundant_casts = true
warn_return_any = true
strict_equality = true
check_untyped_defs = true
disallow_subclassing_any = true
# We can't enable disallow_untyped_calls because of PyMARC.
disallow_untyped_calls = false
disallow_incomplete_defs = true
disallow_untyped_defs = true

[tool.pydoclint]
allow-init-docstring = true
skip-checking-raises = true
style = "sphinx"

[tool.pylint.format]
max-line-length = 120
